plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    mavenCentral()
    maven {
        url uri('../../repo')
    }
}
dependencies {
    compileOnly files("${System.getProperty('java.home')}/../lib/tools.jar")
    implementation project(":base")
}
jar {
    manifest {
        attributes(
                'Add-Exports': "jdk.compiler/com.sun.tools.javac.api jdk.compiler/com.sun.tools.javac.util jdk.compiler/com.sun.tools.javac.comp",
                'Add-Opens': "jdk.compiler/com.sun.tools.javac.main jdk.compiler/com.sun.tools.javac.parser",
        )
    }
}
compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-XDignore:symbol.file"
}
task sourceJar(type: Jar) {
    from sourceSets.main.allJava
    archiveClassifier = "sources"
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId "com.github.122006.Zircon"
            artifactId "javac"
            version rootProject.ext.version
            from components.java
            artifact sourceJar
        }
    }
    repositories {
        maven {
            url = uri('../../repo')
        }
    }

}
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
